--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "eslint-plugin-standard": "^4.0.1",
     "grunt": "^1.0.2",
     "grunt-contrib-jshint": "^1.1.0",
-    "lerna": "^3.20.2"
+    "lerna": "3.22.1"
   },
   "keywords": [
     "labjack"
