--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "LabJack Kipling device configuration and general I/O GUI program.",
   "scripts": {
     "build:old": "node scripts/prep_build_and_run.js",
-    "build": "cd ljswitchboard-builder && node ./build_scripts/build_project.js && cd ..",
+    "build": "npm config set msvs_version 2015 && cd ljswitchboard-builder && node ./build_scripts/build_project.js && cd ..",
     "clean": "lerna clean",
     "clean_core": "node main.js --which=core do -c \"rm -r node_modules\"",
     "clean_temp_files": "node scripts/clean_temp_files.js",
