--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,8 +27,10 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       #      - run: npm ci # doesn't work with node8
+      - run: npm install --global node-gyp@latest
+      - run: npm install --global --production windows-build-tools --vs2017
       - run: npm install
-      - run: npm config set msvs_version 2012 && npm run setup
+      - run: npm run setup
       - run: npm run build
 
       - run: ls ./ljswitchboard-builder
