--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,7 +28,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       #      - run: npm ci # doesn't work with node8
       - run: npm install --global node-gyp@latest
-#      - run: npm install --global --production windows-build-tools --vs2017
+      - run: npm install --global --production windows-build-tools --vs2015
         if: ${{ matrix.platform == 'windows-latest' }}
       - run: npm install
       - run: npm config set msvs_version 2015 && npm run setup
