--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,6 +32,8 @@ jobs:
         if: ${{ matrix.platform == 'windows-latest' }}
       - run: npm install
       - run: npm config set msvs_version 2015 && npm run setup
+      - name: Fix lerna mess
+        run: find . | grep package.json.lerna_backup | while read NAME ; do mv $NAME $(echo $NAME | sed s/.lerna_backup//) ; done
       - run: npm run build
 
       - run: ls ./ljswitchboard-builder
