--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,7 +33,7 @@ jobs:
       - run: npm install
       - run: npm config set msvs_version 2015 && npm run setup
       - name: Fix lerna mess
-        run: find . | grep package.json.lerna_backup | while read NAME ; do mv $NAME $(echo $NAME | sed s/.lerna_backup//) ; done
+        run: node ./scripts/fix_lerna_backup.js
       - run: npm run build
 
       - run: ls ./ljswitchboard-builder
