--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "q": "^1.5.1"
   },
   "devDependencies": {
+    "fs.extra": "^1.3.2",
     "eslint": "^5.16.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-standard": "^4.0.1",
