--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,8 +21,9 @@ jobs:
     runs-on: ${{ matrix.platform }}
 
     steps:
-      - name: Set current date as env variable
-        run: echo "::set-env name=NOW::$(date +'%Y_%m_%d')"
+      - name: Get current date
+        id: date
+        run: echo "::set-output name=date::$(date +'%Y_%m_%d')"
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
@@ -42,16 +43,16 @@ jobs:
 
       - uses: actions/upload-artifact@v2
         with:
-          name: kipling.3.1.18.${{ NOW }}_linux64.tar.gz
+          name: kipling.3.1.18.${{ steps.date.outputs.date }}_linux64.tar.gz
           path: ljswitchboard-builder/kipling*
         if: ${{ matrix.platform == 'ubuntu-latest' }}
       - uses: actions/upload-artifact@v2
         with:
-          name: kipling.3.1.18.${{ NOW }}_windows.zip
+          name: kipling.3.1.18.${{ steps.date.outputs.date }}_windows.zip
           path: ljswitchboard-builder/kipling*
         if: ${{ matrix.platform == 'windows-latest' }}
       - uses: actions/upload-artifact@v2
         with:
-          name: kipling.3.1.18.${{ NOW }}_macos.zip
+          name: kipling.3.1.18.${{ steps.date.outputs.date }}_macos.zip
           path: ljswitchboard-builder/kipling*
         if: ${{ matrix.platform == 'macos-latest' }}
