--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "homepage": "https://github.com/labjack/labjack_kipling",
   "dependencies": {
-    "async": "^3.2.0",
+    "async": "1.5.2",
     "fs-extra": "^0.18.4",
     "q": "^1.5.1"
   },
