Attempt to fix ljmmm_parse

--- a/ljswitchboard-splash_screen/package.json
+++ b/ljswitchboard-splash_screen/package.json
@@ -78,7 +78,7 @@
   },
   "enableStartupConfig": false,
   "buildType": "release",
-  "test": false,
+  "test": true,
   "clearCachesOnModuleLoad": true,
   "testPersistentDataFolderName": "K3_DEV",
   "performLiveTests": false,
