--- a/ljswitchboard-module_manager/package.json
+++ b/ljswitchboard-module_manager/package.json
@@ -32,6 +32,7 @@
     "html5-lint": "0.3.0",
     "nodeunit": "0.11.3",
     "rewire": "4.0.1",
+    "ljmmm-parse": "*",
     "handlebars": ">=4.0.0"
   },
   "directories": {
