--- a/ljswitchboard-module_manager/package.json
+++ b/ljswitchboard-module_manager/package.json
@@ -22,7 +22,9 @@
   ],
   "license": "MIT",
   "bugs": {"url": "https://github.com/labjack/labjack_kipling/issues"},
-  "dependencies": {},
+  "dependencies": {
+    "ljmmm-parse": "*"
+  },
   "devDependencies": {
     "fs.extra": "1.3.2",
     "q": "1.5.1",
@@ -32,7 +34,6 @@
     "html5-lint": "0.3.0",
     "nodeunit": "0.11.3",
     "rewire": "4.0.1",
-    "ljmmm-parse": "*",
     "handlebars": ">=4.0.0"
   },
   "directories": {
