--- a/ljswitchboard-module_manager/package.json
+++ b/ljswitchboard-module_manager/package.json
@@ -23,7 +23,8 @@
   "license": "MIT",
   "bugs": {"url": "https://github.com/labjack/labjack_kipling/issues"},
   "dependencies": {
-    "ljmmm-parse": "*"
+    "ljmmm-parse": "*",
+    "sprintf-js": "1.1.2"
   },
   "devDependencies": {
     "fs.extra": "1.3.2",
