--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -29,4 +29,4 @@ jobs:
           release_name: Release ${{ github.ref }}
           draft: false
           prerelease: false
-        if: ${{ github.ref == 'v' + steps.package-version.outputs.current-version }}
+        if: ${{ github.ref == join('v', steps.package-version.outputs.current-version) }}
